// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer - Exchange Job Mapping Info should NOT display an edit mapping button, when the selected exchange job mapping is not mapped 1`] = `
<pf-exchange-job-mapping-info
  applyingMapping$={[Function Store]}
  applyingMappingError$={[Function Store]}
  closeClicked={[Function EventEmitter]}
  companyJobInfo={[Function Object]}
  companyJobQuery=""
  companyJobsToMapTo$={[Function Store]}
  companyJobsToMapToLoading$={[Function Store]}
  companyJobsToMapToLoadingError$={[Function Store]}
  debouncedQueryValue=""
  editMappingClicked={[Function EventEmitter]}
  editingMapping="false"
  editingMapping$={[Function Store]}
  editingMappingSubscription={[Function Subscriber]}
  exchangeJobInfo={[Function Object]}
  selectedExchangeJobMapping={[Function Object]}
  selectedExchangeJobMapping$={[Function Store]}
  selectedExchangeJobMappingSubscription={[Function Subscriber]}
  selectedMappingCompanyJobId$={[Function Store]}
  store={[Function Store]}
>
    <div
    class="mapping-info-container card h-100"
  >
    
      
    <div
      class="card-header"
    >
      
        
      <div
        class="align-self-center mr-auto"
      >
        
          Mapping Information
        
      </div>
      
        
      
      
  
        
      <div
        class="close-btn"
      >
        
          
        <i
          class="far fa-times"
        />
        
        
      </div>
      
      
    </div>
    
      
    <div
      class="card-body d-flex"
    >
      
  
        
      <pf-job-info-container>
        
        
      </pf-job-info-container>
      
  
        
      <div
        class="vertical-separator"
      />
      
  
        
      
      
  
        
      
      <div
        class="company-job-mapping-container"
      >
        
          
        <pf-input-debounce>
          
          
        </pf-input-debounce>
        
  
          
        <div
          class="mapping-results-container remove-scroll"
        >
          
            
          <pf-async-container>
            
  
              
            
            
  
              
            
            
  
            
          </pf-async-container>
          
  
          
        </div>
        
  
        
      </div>
      
  
      
    </div>
    
    
  </div>
  
</pf-exchange-job-mapping-info>
`;

exports[`Peer - Exchange Job Mapping Info should display an edit mapping button, when the selected exchange job mapping is mapped 1`] = `
<pf-exchange-job-mapping-info
  applyingMapping$={[Function Store]}
  applyingMappingError$={[Function Store]}
  closeClicked={[Function EventEmitter]}
  companyJobInfo={[Function Object]}
  companyJobQuery=""
  companyJobsToMapTo$={[Function Store]}
  companyJobsToMapToLoading$={[Function Store]}
  companyJobsToMapToLoadingError$={[Function Store]}
  debouncedQueryValue=""
  editMappingClicked={[Function EventEmitter]}
  editingMapping="false"
  editingMapping$={[Function Store]}
  editingMappingSubscription={[Function Subscriber]}
  exchangeJobInfo={[Function Object]}
  selectedExchangeJobMapping={[Function Object]}
  selectedExchangeJobMapping$={[Function Store]}
  selectedExchangeJobMappingSubscription={[Function Subscriber]}
  selectedMappingCompanyJobId$={[Function Store]}
  store={[Function Store]}
>
    <div
    class="mapping-info-container card h-100"
  >
    
      
    <div
      class="card-header"
    >
      
        
      <div
        class="align-self-center mr-auto"
      >
        
          Mapping Information
        
      </div>
      
        
      
      <button
        class="btn btn-sm btn-secondary"
        ng-reflect-klass="btn btn-sm"
        ng-reflect-ng-class="[object Object]"
      >
        
          Edit Mapping
        
      </button>
      
  
        
      <div
        class="close-btn"
      >
        
          
        <i
          class="far fa-times"
        />
        
        
      </div>
      
      
    </div>
    
      
    <div
      class="card-body d-flex"
    >
      
  
        
      <pf-job-info-container>
        
        
      </pf-job-info-container>
      
  
        
      <div
        class="vertical-separator"
      />
      
  
        
      
      <pf-job-info-container>
        
        
      </pf-job-info-container>
      
  
        
      
      
  
      
    </div>
    
    
  </div>
  
</pf-exchange-job-mapping-info>
`;
